tests/vdq-rta/should_fail/T24159_pat_parse_error_6.hs
{-# LANGUAGE RequiredTypeArguments #-}
module T24159_pat_parse_error_6 where

f (forall a -> b) = ()
